* Mon Jul 10 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
- Add RockyLinux 8 support

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.1
- Removed EL6 support

* Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.0-0
- Add EL8 support

* Tue Aug 13 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.1-0
- Allow users to force enabling/disabling of the chroot settings
- Allow users to easily set the 'named_write_master_zones' SELinux boolean in
  case they need to support dynamic DNS or zone transfers.
- Added REFERENCE.md

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.1-0
- Support puppetlabs/concat 6.x.

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -6.2.0-0
- Add v2 compliance_markup data

* Mon Apr 01 2019 Jim Anderson <thesemicolons@protonmail.com> - 6.1.2-0
- Moved code for setting chroot directory from manifests/params.pp into data in
  modules

* Fri Mar 29 2019  Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.1.2-0
- Replaced all simpcat resources with puppetlabs concat resources.
- Added support for Puppet 6

* Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.2-0
- Use simplib::validate_net_list in lieu of deprecated Puppet 3
  validate_net_list

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Jan 11 2019 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.1.1-0
- Remove references to `rsync::server::global`
- Update version requirement for pupmod-simp-rsync

* Thu Nov 01 2018 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.1.0-0
- Static asset updates for puppet 5
- Update badges and contribution guide URL in README.md

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0